# esp_idf_bme280_spi_driver

./: .gitignore  CMakeLists.txt  README.md  Wiring_Diagram.md  sdkconfig
.cache/clangd/index/: bme280.cpp.6E65071FB2F0B8A3.idx  bme280.hpp.2007065C200A3860.idx  spi.cpp.CBE5BA1C611A6DB2.idx
main/: CMakeLists.txt  bme280.cpp  bme280.hpp  bme280_algorithms.cpp  bme280_algorithms.hpp  spi.cpp
tests/: CMakeLists.txt  README.md  test_bme280_algorithms.cpp
